--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-runtime": "^6.23.0",
     "meteor-node-stubs": "~0.2.4",
     "vue": "^2.3.2",
-    "vue-meteor-tracker": "^1.2.1"
+    "vue-meteor-tracker": "^1.2.1",
+    "vue-multiselect": "^2.0.0-beta.15"
   }
 }
